fix: log viewer column layout duplicating timestamps, and un-needed scrollbars

--- a/frontend/src/app.css
+++ b/frontend/src/app.css
@@ -157,6 +157,12 @@ html,
 body {
 	overflow-x: hidden;
 	max-width: 100vw;
+	height: 100%;
+}
+
+body {
+	display: flex;
+	flex-direction: column;
 }
 
 main {
@@ -164,7 +170,6 @@ main {
 	max-width: 100%;
 	overflow-x: hidden;
 }
-
 
 html {
 	scrollbar-gutter: stable;
